src/objects/Provider_Facility_Associations__c.object
<CustomObject>
    <fields>
        <fullName>Per_Provider_Inactive_Reason__c</fullName>
        <label>Per Provider Inactive Reason</label>
        <picklist>
            <controllingField>Inactive_Reason__c</controllingField>
            <picklistValues>
                <fullName>Acuity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Did not Reappoint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospital Equipment/Specialties</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospital Staff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hours of coverage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leadership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lengthy Credentialing Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Location</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pay Rate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Provider Unresponsive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scheduling Issues</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Phone_Roster__c</fullName>
        <description>Code from Facility Doc This is actually a Button (One Choice for Phone Roster Status) Value = 1 Normal Contact; Value = 2 For Emer Contact Only; Value = 3 Approval Needed/ Emer Contact; Value = 4 Remove From Phone Roster; These values are used to show where if any the Doctor appears on the Phone Roster.</description>
        <label>Phone Roster</label>
        <picklist>
            <picklistValues>
                <fullName>Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emergency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emergency - Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exclude</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Phy_Orientation_Sent__c</fullName>
        <description>A Orientation package was sent to the Provider.</description>
        <label>Phy Orientation Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Physician_Agreement_ID__c</fullName>
        <label>Physician Agreement ID</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Physician_Orientation_Complete__c</fullName>
        <description>Also called the Attestation date, filled in by the nurse liaision.
Field Label changed 11/03/06 sjj</description>
        <label>Phy Orientation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Planned_Status__c</fullName>
        <description>Facility Docs (Full Time, Part Time, locums) fields</description>
        <label>Planned Status</label>
        <picklist>
            <controllingField>Status__c</controllingField>
            <picklistValues>
                <fullName>Locum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PRN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Full Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Part Time</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Practice_Status_Comment__c</fullName>
        <description>Use to display brief comments on reports.  Was called Recruiter Comments before being renamed to Practice Status Comment</description>
        <label>Practice Status Comment</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Primary_Facility__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary Facility?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Supervisory_Collaborating_physic__c</fullName>
        <label>Primary Superv/Collab Phys</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Print_Sequence__c</fullName>
        <label>Print Sequence</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Professional_Title__c</fullName>
        <description>Populated from the Provider upon creation of the PFA</description>
        <label>Professional Title</label>
        <picklist>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Provider_Facility_Level__c</fullName>
        <description>Providers Level at the facility.</description>
        <label>Provider Facility Level</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.1</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Provider_Facility_Num__c</fullName>
        <formula>CASE( Provider_Facility_Level__c ,&quot;1&quot;,1,&quot;2&quot;,2,&quot;3&quot;,3,&quot;4&quot;,4,&quot;4.1&quot;,4.1,&quot;5&quot;,5,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Provider Facility Num</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Provider_Hours_Last_12_Months__c</fullName>
        <label>Provider Hours Last 12 Months</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Provider_Hours_Last_3_Months__c</fullName>
        <label>Provider Hours Last 3 Months</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Provider_Hours_Last_6_Months__c</fullName>
        <label>Provider Hours Last 6 Months</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Provider_Hours_Workflow_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Provider Hours Workflow Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Provider_Last_Scheduled_Date__c</fullName>
        <label>Provider Last Scheduled Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Provider_Name_2__c</fullName>
        <label>Provider Name 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Qualification__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Provider Qualification</label>
        <referenceTo>Qualification__c</referenceTo>
        <relationshipLabel>Provider Facility Associations</relationshipLabel>
        <relationshipName>Provider_Facility_Associations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Provider_Relationship_with_TSG__c</fullName>
        <description>Used to track the provider relationship wth TSG. Different processes occur based on the type.</description>
        <label>Provider Relationship with TSG</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Existing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Returning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Start-up</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Provider_Review_Comments__c</fullName>
        <description>Provider Review Comments for the facility.</description>
        <label>Provider Review Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Provider_Review_Follow_Up_Date__c</fullName>
        <description>Date the the Provider is scheduled for follow-up at the facility.</description>
        <label>Provider Review Follow-Up Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Provider_Review_Initial_Date__c</fullName>
        <description>MECComments (Initial Date)</description>
        <label>Provider Review Initial Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Provider_Review_Last_Review_Date__c</fullName>
        <description>MECComments(LastReviewed).. Visible to RMO/RVP Profile, Editable by Provider Review Profile. Transaction Date from Legacy Data</description>
        <label>Provider Review Last Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Provider_Review_Owner__c</fullName>
        <description>Responsible  RMO/RVP Other</description>
        <label>RMO/RVP Legacy System</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider__c</fullName>
        <description>Provider</description>
        <label>Provider</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>R00N300000012562EAA</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Provider_is_Self_Insured__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Provider is Self Insured</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Provider_to_SG_Deferral_End_Date__c</fullName>
        <label>Provider to SG Deferral End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Provider_to_SG_Deferral_Reason__c</fullName>
        <label>Provider to SG Deferral Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Indifferent/Undecided Provider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Military Deployment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emergency Medical Leave</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Provider_to_SG_Deferral_Start_Date__c</fullName>
        <label>Provider to SG Deferral Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QA_File_Review_Performed__c</fullName>
        <description>Requested by Tammy Davis for Rapides and CHS tracking</description>
        <label>Q/A File Review Performed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Qualification_Issues__c</fullName>
        <description>Potentially updated by an automated process to compare hospital requirement to doctor qualifications</description>
        <label>Qualification Potential Issues</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Qualification_Manual_Override__c</fullName>
        <description>Used by Credentialing to request that they system no longer check for missing qualifications</description>
        <label>Qualification Override</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>R10_Agreement__c</fullName>
        <label>Rate 10 Agreement $</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>R10_Difference__c</fullName>
        <description>Calculates the difference between the Provider&apos;s rate and the Facility&apos;s rate.</description>
        <formula>R10_Requested__c  -  R10_Facility__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rate 10 Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>R10_Facility__c</fullName>
        <label>Rate 10 Facility $</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>R10_Name__c</fullName>
        <label>Rate 10 Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>R10_Requested__c</fullName>
        <label>Rate 10 Requested $</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>R11_Agreement__c</fullName>
        <label>Rate 11 Agreement $</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>R11_Difference__c</fullName>
        <formula>R11_Requested__c  -  R11_Facility__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rate 11 Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>R11_Facility__c</fullName>
        <label>Rate 11 Facility $</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>R11_Name__c</fullName>
        <label>Rate 11 Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>R11_Requested__c</fullName>
        <label>Rate 11 Requested $</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>R12_Agreement__c</fullName>
        <label>Rate 12 Agreement $</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>R12_Difference__c</fullName>
        <formula>R12_Requested__c  -  R12_Facility__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rate 12 Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>R12_Facility__c</fullName>
        <label>Rate 12 Facility $</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>R12_Name__c</fullName>
        <label>Rate 12 Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>R12_Requested__c</fullName>
        <label>Rate 12 Requested $</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RMO__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Provider Review RMO.</description>
        <label>RMO/RVP/Risk Mgr</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N40000001Hsn0EAC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RMO_to_review_approve_the_above__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RMO to Review / Approve the Above</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RPP_Rate__c</fullName>
        <label>RPP Rate</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rate_10_Detail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rate 10 Detail</label>
        <referenceTo>Hospital_Rates__c</referenceTo>
        <relationshipName>R00N40000001Hjk8EAC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rate_11_Detail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rate 11 Detail</label>
        <referenceTo>Hospital_Rates__c</referenceTo>
        <relationshipLabel>Provider Facility Associations (Rate 11 Detail)</relationshipLabel>
        <relationshipName>Provider_Facility_Associations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rate_12_Detail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rate 12 Detail</label>
        <referenceTo>Hospital_Rates__c</referenceTo>
        <relationshipLabel>Provider Facility Associations (Rate 12 Detail)</relationshipLabel>
        <relationshipName>Provider_Facility_Associations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ReApp_Expiration_Date__c</fullName>
        <label>ReApp Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ReAppt_Due_Date__c</fullName>
        <description>ReAppointment Due Date.</description>
        <label>ReAppt Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reappt_Received_Date__c</fullName>
        <label>Reappt Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reappt_Sent_Date__c</fullName>
        <label>Reappt Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reappt_Sent_to_Hosp__c</fullName>
        <label>Reappt Sent to Hosp</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reference_Check_Complete_Date__c</fullName>
        <description>Date that the 3 required references are accepted.</description>
        <label>Reference Check Complete Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>References_Confirmed__c</fullName>
        <description>Used by Recruiting to indicate the number of references confirmed for this opportunity.</description>
        <label># References Confirmed</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>Region Auto-populated from the Account</description>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>GL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GL I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GL II</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HM Central</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HM East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HM West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MW II</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SC I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SC II</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SC III</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SC IV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SE II</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SE III</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SE IV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SE V</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SW I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SW II</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SW III</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SW IV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SW V</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WW5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WW6</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Relocation_Bonus_Payout__c</fullName>
        <label>Relocation Bonus Payout</label>
        <picklist>
            <picklistValues>
                <fullName>Hourly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upfront</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Relocation_Expense__c</fullName>
        <description>The cost of provider relocation.  Normaly a one time expense paid in advance.  Repayment may apply.</description>
        <label>Relocation Expense</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Repayment_Term__c</fullName>
        <description>Defines if Sign on Bonus &amp; Relocation Expense is subject to a repayment clause in the contract.  Normally this is a time period for full or pro-rated payback, however a advance paid back from pay is possible.  See details in the contract amendment.</description>
        <label>Repayment Term</label>
        <picklist>
            <picklistValues>
                <fullName>Pro Rata</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Full</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Request_Agreement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Request Agreement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Request_Hosp_App__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Request Hosp App</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Request_Insurance_Date__c</fullName>
        <description>Entered by CPEC</description>
        <label>Request TSG Insurance Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Request_PEP_Packet__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Request PEP Packet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Request_PFA_Inactivation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Request PFA Inactivation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Request_Self_Insurance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Request Self Insurance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Request_Self_Insured_to_TSG_EL_Insurance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Request Self Insured to TSG/EL Insurance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Request_Special_Terms__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Request Special Terms</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Requested_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requested By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N300000012UBCEA2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requested_Date__c</fullName>
        <label>Requested Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Requested_Effective_Date__c</fullName>
        <description>Used by recruiters to request an agreement effective date. Populates email approval template</description>
        <label>Requested Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Resend_Date__c</fullName>
        <label>Resend Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Responsible_Party_for_Follow_Up__c</fullName>
        <label>Responsible Party for Follow Up</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retention_Bonus_Payout__c</fullName>
        <label>Retention Bonus Payout</label>
        <picklist>
            <picklistValues>
                <fullName>Hourly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Retention_Bonus_Repayment__c</fullName>
        <label>Retention Bonus Repayment</label>
        <picklist>
            <picklistValues>
                <fullName>Full</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pro Rata</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Retention_Bonus__c</fullName>
        <label>Retention Bonus</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Returning_Reference_Check_Complete__c</fullName>
        <label>Returning Reference Check Complete</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Roster_Comments__c</fullName>
        <description>FacilityDocs: Spare2</description>
        <label>Roster Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Self_Insurance_Effective_Date__c</fullName>
        <label>Self-Insurance Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Self_Insurance_Expiration_Date__c</fullName>
        <label>Self-Insurance Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Self_Insured_Addendum_Received_Date__c</fullName>
        <label>Self-Insured Addendum Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Shift_Commitment__c</fullName>
        <label>Shift Commitment</label>
        <picklist>
            <picklistValues>
                <fullName>1-5 shifts/month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6-10 shifts/month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>› 10 shifts/month</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Shift_Gaurantee__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Provider receives a shift gurantee</description>
        <label>Shift Guarantee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Shift_Guarantee_Comments__c</fullName>
        <label>Shift Guarantee Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Shift_Guarantee_End_Date__c</fullName>
        <label>Shift Guarantee End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Shift_Guarantee_Start_Date__c</fullName>
        <description>Date the shift gaurantee takes place.</description>
        <label>Shift Guarantee Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sign_On_Bonus_Payout__c</fullName>
        <label>Sign On Bonus Payout</label>
        <picklist>
            <picklistValues>
                <fullName>Hourly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sign_On_Bonus_Repayment__c</fullName>
        <label>Sign On Bonus Repayment</label>
        <picklist>
            <picklistValues>
                <fullName>Full</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pro Rata</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sign_On_Bonus__c</fullName>
        <description>Paid to the provider prior to start of work.  May be subject to repayment based on the terms of the contract.  Normally a fixed time period.</description>
        <label>Sign On Bonus</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sixty_Day_Interest_In_Referring__c</fullName>
        <defaultValue>false</defaultValue>
        <label>60 Day Interest In Referring</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Special_Notice_Time__c</fullName>
        <label>Special Notice Time</label>
        <picklist>
            <picklistValues>
                <fullName>Immediate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14 Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30 days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60 days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>90 Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>120 days</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Special_Rate__c</fullName>
        <label>Special Rate</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Special_Terms__c</fullName>
        <label>Special Terms</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>TSG Application and Hospital Application has been received.  References have been checked.</description>
        <inlineHelpText>What recruiting stage is the provider.</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Prospect</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Candidate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting to be Scheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scheduled Full Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scheduled Part Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On-Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TSG_Inactive_Date__c</fullName>
        <label>TSG Inactive Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TailCoverageLetterDate__c</fullName>
        <label>Tail Coverage Letter Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Tail_Coverage_Purchased__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tail Coverage Purchased</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>